# Test2DEngine

./: CMakeLists.txt  README.md
src/: buffer.c  buffer.h  framebuffer.c  framebuffer.h  imgui_renderer.c  imgui_renderer.h  macros.h  main.c  renderer.c  renderer.h  scene.c  scene.h  shader.c  shader.h  shader_source.h  window.c  window.h
